--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,14 @@ dependencies:
   firebase_storage: ^11.6.9
   cloud_firestore: ^4.15.8
   google_fonts: ^5.0.0
-  flutter_riverpod: ^2.6.1
+  dotted_border: ^2.1.0
+  image_picker: ^1.0.8
+  uuid: ^4.5.1
+  cached_network_image: ^3.4.0
+  provider: ^6.1.2
+  flutter_svg: ^2.0.16
+  intl: ^0.20.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
